# Huffman-encoding

./: 22336061 窦正, 22336313 郑鸿鑫  实践报告.docx  README.md
程序源代码、主程序及测试文本/: BIN.cpp  BIN.h  CMakeLists.txt  Info.h  TXT.cpp  TXT.h  main.cpp  对源代码的说明.txt
程序源代码、主程序及测试文本/主程序及测试文本/: 20080724.txt  ARM_OmapNetbook.txt  BuildingCommunity_Contacts.txt  CanadianTeam.txt  DesktopTeam_Meeting_2011-02-01.txt  DesktopTeam_Specs_Karmic_Quickly.txt  DesktopTranslator.txt  MeetingLogs_Server_20080729.txt  运行程序前，请先阅读此说明.txt
